--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,7 @@ jobs:
         run: npm install -g yarn          
 
       - name: Install Depenicies
-        run: yarn install
+        run: yarn install --production=true
 
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Run Updater
+        run: yarn run data-updater
