--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,6 @@ jobs:
       - name: Update Data
         uses: test-room-7/action-update-file@v1
         with:
-            file-path: data/*.*
+            file-path: data
             commit-msg: Update Data
             github-token: ${{ secrets.GITHUB_TOKEN }}
