--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,9 +35,11 @@ jobs:
       - name: Run Updater & Update Data
         run: yarn run data-updater
 
-      - name: Update Data
-        uses: test-room-7/action-update-file@v1
-        with:
-            file-path: data
-            commit-msg: Update Data
-            github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Deploy Updated Data
+        run: |
+          git config user.name "${{ secrets.GH_USER }}"
+          git config user.email "${{ secrets.GH_MAIL }}"
+
+          git add data
+          git commit -m "Deploy Updated Data"
+          git push
