--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,6 @@ jobs:
           git config user.name "${{ secrets.GH_USER }}"
           git config user.email "${{ secrets.GH_MAIL }}"
 
-          git add data
+          git add data -f
           git commit -m "Deploy Updated Data"
-          git push
+          git push -f
