--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,9 @@ jobs:
 
       - name: Deploy Updated Data
         run: |
-          git config user.name "${{ secrets.GH_USER }}"
+          git config user.name ${{ secrets.GH_USER }}
           git config user.email "${{ secrets.GH_MAIL }}"
+          git remote add gh-token "https://${{ secrets.GH_TOKEN}}@github.com/:user/:repo.git"
 
           git add data -f
           git commit -m "Deploy Updated Data"
