--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,3 +34,9 @@ jobs:
 
       - name: Run Updater & Update Data
         run: yarn run data-updater
+
+      - name: Deploy Updated Data
+        run: |
+          git add data -f
+          git commit -m "Deploy Updated Data"
+          git push -f
