--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,19 @@ jobs:
         with:
           node-version: 14.16.1
 
+      - name: Deploy Updated Data
+        run: |
+          git config --global user.name "TheArmagan"
+          git config --global user.email "kiracarmaganonal@gmail.com" 
+
       - name: Clear API Data
         run: rm -rf ./api
+
+      - name: Deploy Updated Data
+        run: |
+          git add api -f
+          git commit -m "[🚀] Clear Old Data"
+          git push -f
       
       - name: Install Yarn
         run: npm install -g yarn          
@@ -40,9 +51,6 @@ jobs:
 
       - name: Deploy Updated Data
         run: |
-          git config --global user.name "TheArmagan"
-          git config --global user.email "kiracarmaganonal@gmail.com" 
-          
           git add api -f
           git commit -m "[🚀] Deploy Updated Data"
           git push -f
