--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,12 @@ on:
   
   push:
     branches: [ main ]
+
   pull_request:
     branches: [ main ]
+  
+  schedule:
+    - corn: "0 12 * * *" # Every day at 12:00
 
   
   workflow_dispatch:
