--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
     branches: [ main ]
   
   schedule:
-    - corn: "0 12 * * *" # Every day at 12:00
+    corn: "0 12 * * *" # Every day at 12:00
 
   
   workflow_dispatch:
