--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,13 @@ on:
   push:
     branches: [ main ]
 
+
   pull_request:
     branches: [ main ]
   
+
   schedule:
-    corn: "0 12 * * *" # Every day at 12:00
+    corn: "0 0 */1 * *" # Every day
 
   
   workflow_dispatch:
