--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
   
 
   schedule:
-    corn: [ "0 0 */1 * *" ] # Every day
+    - corn: [ "0 0 */1 * *" ] # Every day
 
   
   workflow_dispatch:
