--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
           git config --global user.email "kiracarmaganonal@gmail.com" 
 
       - name: Clear API Data
-        run: rm -rf ./api
+        run: rm -rf ./api || true # Ignore if error happens
 
       - name: Clear Old Data
         run: |
